--- a/amazon.html
+++ b/amazon.html
@@ -20,6 +20,16 @@
 
 <script>
 
+_.each(shop_list, function(num)
+
+		{ 
+
+		
+
+			var itemlist =_.where(product, {name: search_input});
+
+
+		});
 
 
 </script>
